test/library/standard/List/general/classLists/listSetBorrow.good
listSetBorrow.chpl:10: In function 'setGlobalLst1':
listSetBorrow.chpl:11: error: Scoped variable would outlive the value it is set to
listSetBorrow.chpl:10: note: consider scope of arg
